# fiume-rl

./: Cargo.toml  Dockerfile  Makefile  README.md  config.docker.yaml  config.yaml  docker-compose.yml
clients/python/: .dockerignore  Dockerfile  pyproject.toml
clients/python/src/app/: main.py
clients/python/src/client/: __init__.py  client.py  hmac_utils.py  middleware.py  models.py
clients/python/tests/: conftest.py
clients/python/tests/e2e/: locustfile.py
clients/python/tests/integration/: test_client.py
clients/python/tests/performance/: test_latency_percentiles.py
clients/python/tests/unit/: test_hmac_utils.py  test_models.py
helm/rate-limiter/: Chart.yaml  values.yaml
helm/rate-limiter/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  etcd-statefulset.yaml  rate-limiter-statefulset.yaml  secret.yaml
k8s/: configmap.yaml  etcd-statefulset.yaml  hmac-secret.yaml  namespace.yaml  rate-limiter-statefulset.yaml
schema/: messages.fbs
src/: config.rs  http_server.rs  lib.rs  limiter.rs  main.rs  server.rs
src/algorithms/: fixed_window.rs  leaky_bucket.rs  mod.rs  sliding_window_counter.rs  sliding_window_log.rs  token_bucket.rs
src/flatbuf/: messages_generated.rs  mod.rs
src/store/: etcd.rs  local.rs  mod.rs
